# real-Handwriting

handwriting-mcp/: Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml
handwriting-mcp/handwriting_mcp/: __init__.py  renderer.py  server.py
handwriting-mcp/presets/: default.json
